--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,6 +7,7 @@ min_version("6.0")
 import os
 
 configfile: "config/config.yaml"
+configfile: "config/cells_config.yaml"
 
 
 REF = config["fasta_file"]
